Self-Hosting/6 uCore-k3s/clusters/apps/collabora/collabora.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: office
  namespace: default
  labels:
    app: office
spec:
  selector:
    matchLabels:
      app: office
  template:
    metadata:
      labels:
        app: office
    spec:
      hostAliases:
      - ip: "192.168.1.200"
        hostnames:
          - "wopi.lan"
      containers:
        - name: office
          image: docker.io/collabora/code:latest
          ports:
            - containerPort: 9980
          command: ["/bin/sh","-c"]
          args: ["coolconfig generate-proof-key && /start-collabora-online.sh"]
          securityContext:
            capabilities:
              add: ["MKNOD"]
---
apiVersion: v1
kind: Service
metadata:
  name: office
  namespace: default
  labels:
    service: office
spec:
  selector:
    app: office
  ports:
    - port: 9980
      targetPort: 9980
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: office
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`office.lan`)
      services:
        - kind: Service
          name: office
          port: 9980
  tls:
    secretName: office-secret
